package ru.app.network;

/**
 * Enum representing available command types that can be sent from client to server.
 *
 * <p>Each enum value corresponds to a specific {@link ru.app.command.Command} implementation on the
 * server side. Commands are transmitted as part of {@link Request} objects over UDP.
 */
public enum CommandType {
  /** Show available commands and their descriptions */
  HELP,
  /** Show information about the collection (type, init date, element count) */
  INFO,
  /** Display all products sorted by name */
  SHOW,
  /** Add a new product (ID auto-generated by server) */
  ADD,
  /** Update an existing product by its ID */
  UPDATE,
  /** Remove a product by its ID */
  REMOVE_BY_ID,
  /** Clear all products from the collection */
  CLEAR,
  /** Save collection to persistent storage (server-only) */
  SAVE,
  /** Execute commands from a script file (client-side only) */
  EXECUTE_SCRIPT,
  /** Exit the client application (not available via network) */
  EXIT,
  /** Remove the first (smallest by ID) product from the collection */
  REMOVE_FIRST,
  /** Add a product only if its ID is less than the minimum in the collection */
  ADD_IF_MIN,
  /** Show the history of executed commands (not implemented in server mode) */
  HISTORY,
  /** Calculate and display the sum of all product prices */
  SUM_OF_PRICE,
  /** Calculate and display the average price of all products */
  AVERAGE_OF_PRICE,
  /** Filter products by their unit of measure */
  FILTER_BY_UNIT_OF_MEASURE,
  /**
   * Register a new user (no authentication required). The server creates the account and
   * immediately authenticates the user.
   */
  REGISTER,
  /**
   * Log in as an existing user. The server validates credentials and returns success only if the
   * login/password pair matches a registered user.
   */
  LOGIN
}
